Bætti inn öllum entities klösum í verkefnið

--- a/Mooshak2/Mooshak2.csproj
+++ b/Mooshak2/Mooshak2.csproj
@@ -204,6 +204,7 @@
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Entities\AssigmentParts.cs" />
     <Compile Include="Models\Entities\Assigments.cs" />
+    <Compile Include="Models\Entities\Roles.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Models\ViewModel\AssigmentViewModel.cs" />
