--- a/Mooshak2/Mooshak2.csproj
+++ b/Mooshak2/Mooshak2.csproj
@@ -204,12 +204,21 @@
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Entities\AssigmentParts.cs" />
     <Compile Include="Models\Entities\Assigments.cs" />
+    <Compile Include="Models\Entities\Courses.cs" />
+    <Compile Include="Models\Entities\Reviews.cs" />
+    <Compile Include="Models\Entities\Roles.cs" />
+    <Compile Include="Models\Entities\Submissions.cs" />
+    <Compile Include="Models\Entities\Users.cs" />
+    <Compile Include="Models\Entities\UsersAndCourses.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
+    <Compile Include="Models\ViewModel\AssigmentCreateEditViewModel.cs" />
     <Compile Include="Models\ViewModel\AssigmentViewModel.cs" />
     <Compile Include="Models\ViewModel\GradeViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\AccountsService.cs" />
     <Compile Include="Services\AssigmnentsService.cs" />
+    <Compile Include="Services\CoursesService.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
   <ItemGroup>
