--- a/Mooshak2/Mooshak2.csproj
+++ b/Mooshak2/Mooshak2.csproj
@@ -227,6 +227,7 @@
     <Compile Include="Models\ViewModel\StudentViewModel.cs" />
     <Compile Include="Models\ViewModel\TeacherViewModel.cs" />
     <Compile Include="Models\ViewModel\UserCreateEditViewModel.cs" />
+    <Compile Include="Models\ViewModel\UserViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\AccountsService.cs" />
     <Compile Include="Services\AssignmentsService.cs" />
@@ -301,6 +302,7 @@
     <Folder Include="Views\Assignment\" />
     <Folder Include="Views\StudentViewModel\" />
     <Folder Include="Views\TeacherViewModel\" />
+    <Folder Include="Views\UserViewModel\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
