--- a/Mooshak2/Mooshak2.csproj
+++ b/Mooshak2/Mooshak2.csproj
@@ -297,8 +297,8 @@
     <Content Include="Views\Account\AdminView.cshtml" />
     <Content Include="Views\Courses\CreateCourse.cshtml" />
     <Content Include="Views\Courses\CourseDetails.cshtml" />
-    <Content Include="Views\Account\StudentView.cshtml" />
     <Content Include="Views\Account\View.cshtml" />
+    <Content Include="Views\Account\StudentView.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -333,7 +333,7 @@
     <VisualStudio>
       <FlavorProperties GUID="{349c5851-65df-11da-9384-00065b846f21}">
         <WebProjectProperties>
-          <UseIIS>True</UseIIS>
+          <UseIIS>False</UseIIS>
           <AutoAssignPort>True</AutoAssignPort>
           <DevelopmentServerPort>59416</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
