--- a/Mooshak2/Mooshak2.csproj
+++ b/Mooshak2/Mooshak2.csproj
@@ -299,6 +299,7 @@
     <Content Include="Views\Courses\CourseDetails.cshtml" />
     <Content Include="Views\Account\View.cshtml" />
     <Content Include="Views\Account\StudentView.cshtml" />
+    <Content Include="Views\Account\TeacherView.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -333,7 +334,7 @@
     <VisualStudio>
       <FlavorProperties GUID="{349c5851-65df-11da-9384-00065b846f21}">
         <WebProjectProperties>
-          <UseIIS>False</UseIIS>
+          <UseIIS>True</UseIIS>
           <AutoAssignPort>True</AutoAssignPort>
           <DevelopmentServerPort>59416</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
